--- a/pom.xml
+++ b/pom.xml
@@ -15,6 +15,12 @@
   </properties>
 
   <dependencies>
+	<dependency>
+	    <groupId>com.google.zxing</groupId>
+	    <artifactId>javase</artifactId>
+	    <version>3.3.3</version>
+  	</dependency>  
+  
     <dependency>
       <groupId>junit</groupId>
       <artifactId>junit</artifactId>
